tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_zero_sized_element_write_failure/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:5:5
  │
5 │     arr[i] = [];
  │     ------
  │
  = Call stack:
    1: main
            at src/main.nr:5:5

Failed assertion
